--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,26 @@
-# Ignore frontend & backend node_modules and .env
-frontend/node_modules/
-frontend/.env
-frontend/dist/
-
-backend/node_modules/
-backend/.env
-
-# System/IDE files
-.DS_Store
-.vscode/
-.idea/
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.env
