--- a/package.json
+++ b/package.json
@@ -7,16 +7,10 @@
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/u3qureshi/waffle-chat-app.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/u3qureshi/waffle-chat-app/issues"
-  },
-  "homepage": "https://github.com/u3qureshi/waffle-chat-app#readme"
+  "dependencies": {
+    "daisyui": "^5.0.46"
+  }
 }
